Change Logo Of App.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,13 +10,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/assets/mobileicon.jpg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/assets/mobileicon.jpg",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -30,7 +30,7 @@
       "short_name": "Dashboard",
       "description": "Go to your dashboard",
       "url": "/",
-      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/assets/mobileicon.jpg", "sizes": "192x192" }]
     }
   ]
 }
