Add PWA manifest and update app icons to maverixicon.png
Introduces a Next.js manifest endpoint for PWA support, updates all notification and icon references from mobileicon.jpg to maverixicon.png, and enhances EmployeeSearch and EmployeeTeamInfo modals with designation and improved UI. Switches sidebar and navigation icons to @tabler/icons-react, updates dependencies, and improves documentation and icon generation scripts accordingly.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-splash": "node scripts/generate-splash-screens.js"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.36.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
