--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.555.0",
     "mongoose": "^8.3.0",
     "next": "^14.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.48",
