--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.36.0",
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
