--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
     "html2canvas": "^1.4.1",
+    "imagekit": "^6.0.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.555.0",
     "mongoose": "^8.3.0",
